add display inventory

--- a/Front End/mini-action-game/src/style/Main.css
+++ b/Front End/mini-action-game/src/style/Main.css
@@ -21,6 +21,14 @@ Body {
   }
 }
 
+
+.grid {
+  position: absolute;
+  display: grid;
+  gap: 10px;
+  grid-auto-flow: column;
+}
+
 .placeHolder {
   background: white;
   width: 100px;
