--- a/Front End/mini-action-game/src/style/Main.css
+++ b/Front End/mini-action-game/src/style/Main.css
@@ -114,6 +114,12 @@ Body {
   }
 }
 
+.appName {
+  font-family: 'Bungee Inline', cursive;
+  text-align: center;
+  font-size: 40px;
+}
+
 .modalClose {
   display: none;
   position: fixed;
@@ -125,6 +131,10 @@ Body {
   overflow: auto;
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
+}
+
+.logOut {
+  float: right;
 }
 
 .modalOpen {
