--- a/Front End/mini-action-game/src/style/Main.css
+++ b/Front End/mini-action-game/src/style/Main.css
@@ -90,6 +90,33 @@ Body {
   text-align: right;
 }
 
+.layerOne {
+  margin-top: 150px;
+  margin-left: 40px;
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.layerTwo {
+  margin-top: 120px;
+  margin-left: 40px;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.map {
+  margin-top: -70px;
+}
+
+.map:nth-child(even){
+  margin-left: 43px;
+}
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
